--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,14 +24,20 @@ jobs:
     - uses: actions/checkout@v4.1.0
     - name: Install system deps
       run: |
-        sudo apt-get update || true
-        sudo apt-get install -y --no-install-recommends \
-            build-essential \
-            vim \
-            ca-certificates \
-            python-dev autotools-dev libicu-dev libbz2-dev \
-            libboost-all-dev || true
-    - uses: "./.github/actions/conda_env_setup"
+        sudo apt-get update
+        sudo apt-get install -y --no-install-recommends build-essential vim ca-certificates python-dev autotools-dev libicu-dev libbz2-dev libboost-all-dev
+    - name: Install Miniconda
+      run: |
+        curl -o ~/miniconda.sh -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+        bash ~/miniconda.sh -b -p $HOME/miniconda
+        rm ~/miniconda.sh
+    - name: Set up Conda environment
+      run: |
+        export PATH="$HOME/miniconda/bin:$PATH"
+        conda config --set always_yes yes --set changeps1 no
+        conda update -q conda
+        conda info -a
+        conda init
     - name: Install libraries and run tests
       run: |
         conda activate ~/env_home_robot
@@ -46,20 +52,12 @@ jobs:
     - uses: actions/checkout@v4.1.0
     - name: Install system deps
       run: |
-        sudo apt-get update || true
-        sudo apt-get install -y --no-install-recommends \
-            build-essential \
-            vim \
-            ca-certificates \
-            libbullet-dev \
-            libjpeg-dev \
-            libglm-dev \
-            libegl1-mesa-dev \
-            xorg-dev \
-            freeglut3-dev \
-            libhdf5-dev || true
+        sudo apt-get update
+        sudo apt-get install -y --no-install-recommends build-essential vim ca-certificates libbullet-dev libjpeg-dev libglm-dev libegl1-mesa-dev xorg-dev freeglut3-dev libhdf5-dev
     - name: Sync submodules
-      run: git submodule sync && git submodule update --init src/third_party/habitat-lab
+      run: |
+        git submodule sync
+        git submodule update --init src/third_party/habitat-lab
     - uses: "./.github/actions/conda_env_setup"
     - name: Install home-robot-sim dependencies & download data
       run: |
