--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,20 +26,15 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y --no-install-recommends build-essential vim ca-certificates python3-dev autotools-dev libicu-dev libbz2-dev libboost-all-dev
-    - name: Install Miniconda
+    - name: Setup Conda environment and run tests
       run: |
         curl -o ~/miniconda.sh -O https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
         bash ~/miniconda.sh -b -p $HOME/miniconda
-        rm ~/miniconda.sh
-    - name: Set up Conda environment
-      run: |
         export PATH="$HOME/miniconda/bin:$PATH"
         conda config --set always_yes yes --set changeps1 no
         conda update -q conda
         conda info -a
         conda init
-    - name: Install libraries and run tests
-      run: |
         conda activate ~/env_home_robot
         pip install -e src/home_robot
         cd tests/home_robot
