--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,7 @@ jobs:
         conda info -a
     - name: Run tests
       run: |
-        conda init
-        conda activate ~/env_home_robot
+        conda init && conda activate ~/env_home_robot
         pip install -e src/home_robot
         cd tests/home_robot
         pytest .
