--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       run: |
         conda config --set always_yes yes --set changeps1 no
         conda info -a
-        pip install torch
+        pip install torch pypandoc
         pip install -e src/home_robot
         cd tests/home_robot
         pytest .
