--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ jobs:
         activate-environment: env_home_robot
     - name: Run tests
       run: |
-        conda install -y -c conda-forge mamba 'python_abi=*=*cp*' pinocchio>=2.6.17
-        pip install torch pypandoc==1.5
+        conda install -n env_home_robot -y -c conda-forge mamba 'python_abi=*=*cp*' pinocchio>=2.6.17
+        pip install torch
         pip install -e src/home_robot
         cd tests/home_robot
         pytest .
@@ -57,7 +57,7 @@ jobs:
         activate-environment: env_home_robot
     - name: Install home-robot-sim dependencies & download data
       run: |
-        conda install -y -c conda-forge mamba 'python_abi=*=*cp*' pinocchio>=2.6.17
+        conda install -n env_home_robot -y -c conda-forge mamba 'python_abi=*=*cp*' pinocchio>=2.6.17
         mamba env update -f src/home_robot_sim/environment.yml
         pip install -e src/third_party/habitat-lab
         python -m habitat_sim.utils.datasets_download --uids mp3d_example_scene --data-path data/
