--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         activate-environment: env_home_robot
     - name: Run tests
       run: |
-        conda install -n env_home_robot -y -c conda-forge mamba 'python_abi=*=*cp*' pinocchio>=2.6.17
+        conda install -n env_home_robot -y -c conda-forge pinocchio>=2.6.17
         pip install torch
         pip install -e src/home_robot
         cd tests/home_robot
@@ -57,8 +57,7 @@ jobs:
         activate-environment: env_home_robot
     - name: Install home-robot-sim dependencies & download data
       run: |
-        conda install -n env_home_robot -y -c conda-forge mamba 'python_abi=*=*cp*' pinocchio>=2.6.17
-        mamba env update -f src/home_robot_sim/environment.yml
+        conda install -n env_home_robot -y -c conda-forge pinocchio>=2.6.17
         pip install -e src/third_party/habitat-lab
         python -m habitat_sim.utils.datasets_download --uids mp3d_example_scene --data-path data/
         mkdir -p tests/home_robot_sim/data/scene_datasets/mp3d_example/mp3d
